; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_cvec.c_clearcvec.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_cvec.c_clearcvec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvec = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cvec* (%struct.cvec*)* @clearcvec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cvec* @clearcvec(%struct.cvec* %0) #0 {
  %2 = alloca %struct.cvec*, align 8
  store %struct.cvec* %0, %struct.cvec** %2, align 8
  %3 = load %struct.cvec*, %struct.cvec** %2, align 8
  %4 = icmp ne %struct.cvec* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load %struct.cvec*, %struct.cvec** %2, align 8
  %8 = getelementptr inbounds %struct.cvec, %struct.cvec* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.cvec*, %struct.cvec** %2, align 8
  %10 = getelementptr inbounds %struct.cvec, %struct.cvec* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.cvec*, %struct.cvec** %2, align 8
  %12 = getelementptr inbounds %struct.cvec, %struct.cvec* %11, i32 0, i32 0
  store i32 -1, i32* %12, align 8
  %13 = load %struct.cvec*, %struct.cvec** %2, align 8
  ret %struct.cvec* %13
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
